--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Extensions/PartnerGroup/Templates/InvoiceSettingTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Extensions/PartnerGroup/Templates/InvoiceSettingTemplate.html
@@ -1,6 +1,6 @@
-﻿<vr-invoice-invoicesetting-selector on-ready="scopeModel.onInvoiceSettingSelectorReady" isrequired="true" normal-col-num="{{invoiceSettingCtrl.normalColNum}}"></vr-invoice-invoicesetting-selector>
+﻿<vr-invoice-invoicesetting-selector on-ready="scopeModel.onInvoiceSettingSelectorReady" isrequired="true" normal-col-num="{{invoiceSettingCtrl.normalColNum}}" ismultipleselection></vr-invoice-invoicesetting-selector>
 
-<vr-columns colnum="{{invoiceSettingCtrl.normalColNum}}">
+<vr-columns colnum="{{invoiceSettingCtrl.normalColNum}}" ng-show="scopeModel.showInvoiceGenerationSettings">
     <vr-select datatextfield="description" datavaluefield="value" label="Setting" datasource="scopeModel.invoiceGenerationSettings"
                selectedvalues="scopeModel.selectedInvoiceGenerationSetting" on-ready="scopeModel.onInvoiceGenerationSettingReady" hideremoveicon isrequired="true">
     </vr-select>
