--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
@@ -3,26 +3,27 @@
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
             <vr-row removeline>
                 <vr-invoice-accountstatus-selector hideremoveicon on-ready="onAccountStatusSelectorReady" normal-col-num="2" onselectionchanged="onAccountStatusSelectionChanged"></vr-invoice-accountstatus-selector>
-             
-                   <vr-directivewrapper vr-loader="isLoadingDirective" directive="invoiceTypeEntity.InvoicePartnerManager.PartnerFilterSelector" on-ready="onPartnerSelectorReady" normal-col-num="2" ismultipleselection></vr-directivewrapper>
 
-                    <vr-columns width="normal">
-                        <vr-datetimepicker type="date" label="From" value="fromDate" isrequired="true"></vr-datetimepicker>
-                    </vr-columns>
-                    <vr-columns width="normal">
-                        <vr-datetimepicker type="date" applytimemax label="To" value="toDate"></vr-datetimepicker>
-                    </vr-columns>
-                    <vr-columns width="normal">
-                        <vr-datetimepicker type="date" label="Issue Date" value="issueDate"></vr-datetimepicker>
-                    </vr-columns>
-</vr-row>
+                <vr-directivewrapper vr-loader="isLoadingDirective" directive="invoiceTypeEntity.InvoicePartnerManager.PartnerFilterSelector" on-ready="onPartnerSelectorReady" normal-col-num="2" ismultipleselection></vr-directivewrapper>
+
+                <vr-columns width="normal">
+                    <vr-datetimepicker type="date" label="From" value="fromDate" isrequired="true"></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns width="normal">
+                    <vr-datetimepicker type="date" applytimemax label="To" value="toDate"></vr-datetimepicker>
+                </vr-columns>
+                <vr-columns width="normal">
+                    <vr-datetimepicker type="date" label="Issue Date" value="issueDate"></vr-datetimepicker>
+                </vr-columns>
+            </vr-row>
         </div>
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
                     <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
-                    <vr-button type="GenerateInvoice" data-onclick="generateInvoice" haspermission="hasGenerateInvoicePermission"></vr-button>
-               </div>
+                    <!--<vr-button type="GenerateInvoice" data-onclick="generateInvoice" haspermission="hasGenerateInvoicePermission"></vr-button>-->
+                    <vr-button type="GenerateInvoice" data-onclick="generateInvoices" haspermission="hasGenerateInvoicePermission"></vr-button>
+                </div>
             </vr-actionbar>
         </vr-row>
         <vr-row>
