--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceGenerationProcessEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceGenerationProcessEditor.html
@@ -12,30 +12,29 @@
                                selectedvalues="scopeModel.selectedInvoiceGenerationPeriod" on-ready="scopeModel.onInvoiceGenerationPeriodReady" hideremoveicon isrequired="true">
                     </vr-select>
                 </vr-columns>
-                <vr-columns colnum="3">
-                    <vr-datetimepicker value="scopeModel.fromDate" type="date" label="From" customvalidate="scopeModel.validateDates()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
-                </vr-columns>
 
-                <vr-columns colnum="3">
-                    <vr-datetimepicker value="scopeModel.toDate" type="date" label="To" customvalidate="scopeModel.validateDates()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
-                </vr-columns>
+                <vr-columns colnum="6" haschildcolumns>
+                    <vr-columns colnum="6">
+                        <vr-datetimepicker value="scopeModel.fromDate" type="date" label="From" customvalidate="scopeModel.validateDates()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
+                    </vr-columns>
 
+                    <vr-columns colnum="6">
+                        <vr-datetimepicker value="scopeModel.toDate" type="date" label="To" customvalidate="scopeModel.validateDates()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
+                    </vr-columns>
+                    <vr-columns colnum="12" ng-if="!scopeModel.areDatesRequired()">
+                        <vr-label isvalue style="text-align:center">From & To should be specified if some partners don't have billing cycle</vr-label>
+                    </vr-columns>
+                </vr-columns>
+              
                 <vr-columns colnum="3">
                     <vr-datetimepicker value="scopeModel.issueDate" type="date" label="Issue Date" isrequired="true"></vr-datetimepicker>
                 </vr-columns>
-            </vr-row>
+            </vr-row>           
         </vr-form>
 
         <vr-row removeline>
             <vr-columns width="fullrow">
                 <vr-button class="pull-right" vr-disabled="formGeneration.validate()" type="EvaluateResult" data-onclick="scopeModel.evaluate" standalone></vr-button>
-            </vr-columns>
-        </vr-row>
-        <vr-row removeline ng-show="scopeModel.errorMessage!=undefined">
-            <vr-columns width="fullrow">
-                <label class="alert alert-danger" vr-alert>
-                    {{scopeModel.errorMessage}}
-                </label>
             </vr-columns>
         </vr-row>
 
