--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -2959,6 +2959,11 @@ vr-validator[vr-input] > div:nth-child(1){
 .vr-datagrid-celltext .empty-line-col {
     top: 18px;
 }
+
+.vr-datagrid-celltext vr-button[standalone] span[class^="glyphicon"]{
+    font-size:18px !important;
+}
+
 .vr-datagrid-celltext vr-validator[vr-input] > div:nth-child(1) {
     height: 21px;
     min-height: initial !important;
