--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
@@ -7,7 +7,7 @@
                              loadmoredata="scopeModel.loadMoreEmptyRates"
                              pagingtype="'PagingOnScroll'"
                              norowhighlightonclick="'true'"
-                             maxheight="100px"
+                             maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
@@ -37,7 +37,7 @@
                              loadmoredata="scopeModel.loadMoreZeroRates"
                              pagingtype="'PagingOnScroll'"
                              norowhighlightonclick="'true'"
-                             maxheight="100px"
+                             maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
@@ -67,7 +67,7 @@
                              loadmoredata="scopeModel.loadMoreNegativeRates"
                              pagingtype="'PagingOnScroll'"
                              norowhighlightonclick="'true'"
-                             maxheight="100px"
+                             maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
@@ -99,7 +99,7 @@
                              loadmoredata="scopeModel.loadMoreDuplicateRates"
                              pagingtype="'PagingOnScroll'"
                              norowhighlightonclick="'true'"
-                             maxheight="100px"
+                             maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
                     <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Calculated Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
