--- a/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Sales.Web/WhS_Sales/Directives/Extensions/BulkAction/ValidationResult/Template/RateValidationResultTemplate.html
@@ -1,7 +1,7 @@
 ﻿<vr-tabs>
     <vr-tab header="'Empty Rates'" ng-if="scopeModel.showEmptyRateGrid">
         <vr-row>
-            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum}}">
+            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum * 2}}">
                 <vr-datagrid on-ready="scopeModel.onEmptyRateGridReady"
                              datasource="scopeModel.emptyRates"
                              loadmoredata="scopeModel.loadMoreEmptyRates"
@@ -9,7 +9,7 @@
                              norowhighlightonclick="'true'"
                              maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
-                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" widthfactor="40" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
                         <vr-textbox type="number"
@@ -31,7 +31,7 @@
     </vr-tab>
     <vr-tab header="'Zero Rates'" ng-if="scopeModel.showZeroRateGrid">
         <vr-row>
-            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum}}">
+            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum * 2}}">
                 <vr-datagrid on-ready="scopeModel.onZeroRateGridReady"
                              datasource="scopeModel.zeroRates"
                              loadmoredata="scopeModel.loadMoreZeroRates"
@@ -39,7 +39,7 @@
                              norowhighlightonclick="'true'"
                              maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
-                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" widthfactor="40" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
                         <vr-textbox type="number"
@@ -61,7 +61,7 @@
     </vr-tab>
     <vr-tab header="'Negative Rates'" ng-if="scopeModel.showNegativeRateGrid">
         <vr-row>
-            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum}}">
+            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum * 2}}">
                 <vr-datagrid on-ready="scopeModel.onNegativeRateGridReady"
                              datasource="scopeModel.negativeRates"
                              loadmoredata="scopeModel.loadMoreNegativeRates"
@@ -69,7 +69,7 @@
                              norowhighlightonclick="'true'"
                              maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
-                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" widthfactor="40" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Current Rate'" field="'Entity.CurrentRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Calculated Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn widthfactor="5" disablesorting></vr-datagridcolumn><!-- Added to create padding between the Rate column and the edge of the grid -->
@@ -93,7 +93,7 @@
     </vr-tab>
     <vr-tab header="'Duplicate Rates'" ng-if="scopeModel.showDuplicateRateGrid">
         <vr-row>
-            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum}}">
+            <vr-columns colnum="{{rateValidationResultCtrl.normalColNum * 2}}">
                 <vr-datagrid on-ready="scopeModel.onDuplicateRateGridReady"
                              datasource="scopeModel.duplicateRates"
                              loadmoredata="scopeModel.loadMoreDuplicateRates"
@@ -101,7 +101,7 @@
                              norowhighlightonclick="'true'"
                              maxheight="{{scopeModel.maxheight}}"
                              hidegridmenu>
-                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" disablesorting></vr-datagridcolumn>
+                    <vr-datagridcolumn headertext="'Zone'" field="'Entity.ZoneName'" type="'Text'" widthfactor="40" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn headertext="'Calculated Rate'" field="'Entity.CalculatedRate'" type="'Number'" numberprecision="'LongPrecision'" disablesorting></vr-datagridcolumn>
                     <vr-datagridcolumn widthfactor="5" disablesorting></vr-datagridcolumn><!-- Added to create padding between the Rate column and the edge of the grid -->
                     <vr-datagridcolumn headertext="'Fixed Rate'" disablesorting>
