--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -398,6 +398,26 @@ inp .menu-to-top {
 .empty-line-col {
     top: 19px;
 }
+vr-columns[withemptyline="true"] .empty-line-col{
+    top: 19px !important;
+}
+
+vr-columns[withemptyline="false"] .empty-line-col{
+    top: 0px !important;
+}
+
+.vr-datagrid-celltext vr-columns[withemptyline="true"] .empty-line-col{
+    top: 18px !important;
+}
+
+.vr-datagrid-celltext vr-columns[withemptyline="false"] .empty-line-col{
+    top: 0px !important;
+}
+
+.vr-datagrid-celltext vr-button>div{
+    height:unset !important;
+
+}
 .parent-col-container{
     padding-left: 0px !important;
     padding-right: 0px !important;
@@ -2961,7 +2981,7 @@ vr-validator[vr-input] > div:nth-child(1){
 }
 
 .vr-datagrid-celltext vr-button[standalone] span[class^="glyphicon"]{
-    font-size:18px !important;
+    font-size:17px !important;
 }
 
 .vr-datagrid-celltext vr-validator[vr-input] > div:nth-child(1) {
