VRTimeZoneEditor refactor and add vr-common-timeoffset-selector
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44029

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTimeZone/VRTimeZoneEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/VRTimeZone/VRTimeZoneEditor.html
@@ -10,7 +10,7 @@
                                ng-init="signs=[{text:'&plus;',value:''},{text:'&minus;',value:'-'}]" datasource="signs" selectedvalues="sign" isrequired="true"></vr-select>
                 </vr-columns>
                 <vr-columns width="1/3row">
-                    <vr-datetimepicker type="time" label="Time Shift" value="time" isrequired></vr-datetimepicker>
+                    <vr-common-timeoffset-selector on-ready="onTimeOffsetSeletorReady" isrequired="true"></vr-common-timeoffset-selector>
                 </vr-columns>
                
             </vr-row>
