--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceGenerationProcessEditor.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/Runtime/InvoiceGenerationProcessEditor.html
@@ -15,11 +15,11 @@
 
                 <vr-columns colnum="6" haschildcolumns>
                     <vr-columns colnum="6">
-                        <vr-datetimepicker value="scopeModel.fromDate" type="date" label="From" customvalidate="scopeModel.validateDates()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
+                        <vr-datetimepicker value="scopeModel.fromDate" type="date" label="From" customvalidate="scopeModel.validateFromDate()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
                     </vr-columns>
 
                     <vr-columns colnum="6">
-                        <vr-datetimepicker value="scopeModel.toDate" type="date" label="To" customvalidate="scopeModel.validateDates()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
+                        <vr-datetimepicker value="scopeModel.toDate" type="date" label="To" customvalidate="scopeModel.validateToDate()" isrequired="scopeModel.areDatesRequired()"></vr-datetimepicker>
                     </vr-columns>
                     <vr-columns colnum="12" ng-if="!scopeModel.areDatesRequired()">
                         <vr-label isvalue style="text-align:center">From & To should be specified if some partners don't have billing cycle</vr-label>
