updating the edit feature in the Account Manager Directive
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44061

--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerDefinitionEditorTemplate.html
@@ -1,3 +1,5 @@
 ﻿<vr-tab header="'Settings'">
-    <vr-accountmanager-accountmanagerdefinition-grid on-ready="onGridReady"></vr-accountmanager-accountmanagerdefinition-grid> 
+    <vr-columns colnum="12">
+    <vr-accountmanager-accountmanagerdefinition-grid on-ready="onGridReady"></vr-accountmanager-accountmanagerdefinition-grid>
+        </vr-columns>
 </vr-tab>
