--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/Grid/Templates/AnalyticRecordsDataGrid.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Runtime/Grid/Templates/AnalyticRecordsDataGrid.html
@@ -1,14 +1,17 @@
-﻿
-<div ng-show="analyticrecordsctrl.showGrid">
+﻿<div ng-show="analyticrecordsctrl.showGrid">
     <vr-datagrid datasource="analyticrecordsctrl.datasource" defaultsortbyfieldname="analyticrecordsctrl.sortField" normalcell
                  pagingtype="'Pager'" dataretrievalfunction="analyticrecordsctrl.dataRetrievalFunction" menuactions="gridMenuActions"
                  on-ready="analyticrecordsctrl.gridReady" enableautoexport="true" gridmenuactions="analyticrecordsctrl.gridLeftMenuActions" showexpand="isExpandable">
-        <vr-datagridcolumn ng-if="analyticrecordsctrl.groupingDimensions.length>0" ng-repeat="dimension in analyticrecordsctrl.groupingDimensions" headertext="dimension.Title" type="dimension.Type" widthfactor="dimension.Widthfactor" fixedwidth="dimension.ColumnSettings.FixedWidth"
-                           numberprecision="dimension.NumberPrecision" field="dimension.Type.indexOf('Date') > -1 || dimension.Type.indexOf('Number') > -1 ? 'DimensionValues[' + $index + '].Value' : 'DimensionValues[' + $index + '].Name'" columnindex="$index"></vr-datagridcolumn>
 
-        <vr-datagridcolumn ng-repeat="measure in analyticrecordsctrl.measures" headertext="measure.Title" type="measure.Type" numberprecision="measure.NumberPrecision" widthfactor="{{measure.Widthfactor}}" fixedwidth="measure.FixedWidth"
-                           field="'MeasureValues.' + measure.MeasureName + '.Value'" tag="measure.MeasureName" summaryfield="'MeasureValues.' + measure.MeasureName + '.Value'" getcolor="analyticrecordsctrl.getMeasureColor"></vr-datagridcolumn>
+        <vr-datagridcolumn ng-if="analyticrecordsctrl.groupingDimensions.length>0" ng-repeat="dimension in analyticrecordsctrl.groupingDimensions" headertext="dimension.Title" type="dimension.Type"
+                           field="dimension.Type.indexOf('Date') > -1 || dimension.Type.indexOf('Number') > -1 ? 'DimensionValues[' + $index + '].Value' : 'DimensionValues[' + $index + '].Name'"
+                           widthfactor="dimension.Widthfactor" fixedwidth="dimension.ColumnSettings.FixedWidth" numberprecision="dimension.NumberPrecision" columnindex="$index">
+        </vr-datagridcolumn>
 
+        <vr-datagridcolumn ng-repeat="measure in analyticrecordsctrl.measures" headertext="measure.Title" type="measure.Type" numberprecision="measure.NumberPrecision"
+                           field="'MeasureValues.' + measure.MeasureName + '.Value'" tag="measure.MeasureName" summaryfield="'MeasureValues.' + measure.MeasureName + '.Value'"
+                           widthfactor="{{measure.Widthfactor}}" fixedwidth="measure.FixedWidth" getcolor="analyticrecordsctrl.getMeasureColor">
+        </vr-datagridcolumn>
 
         <vr-datagridexpandablerow>
             <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
